Criterion C checkpoint